# toxic-comment-detection

./: .gitignore  pyproject.toml
src/analytics/: analytics_mean_distance.py  analytics_time_series.py  count_label.py  find_distance.py  threshold_sensitivity.py
src/core/: data.py  embedding.py  en_preprocess.py  ko_preprocess.py  metrics.py
src/experiments/en/comparison_llamaguard_3_1b/: predict.py
src/experiments/en/comparison_llamaguard_3_8b/: predict.py
src/experiments/en/experiment01_good_and_bad/: iteration_predict.py  predict.py
src/experiments/en/experiment02_threshold/: model.py  predict.py
src/experiments/en/experiment03_knn_nn/: iterator.py  model.py  predict.py
src/experiments/en/experiment04_nn/: model.py  predict.py
src/experiments/en/experiment05_clustering/: README.md  predict.py
src/experiments/en/experiment05_clustering/01_kmeans/: builder.py
src/experiments/en/experiment05_clustering/02_dbscan/: builder.py
src/experiments/en/experiment05_clustering/03_incremental/: README.md  builder.py  update.py
src/experiments/en/experiment05_clustering/04_incremental/: README.md  builder.py
src/experiments/ko/comparison_gpt4_1_nano/: analytics.py  predict.py  prompt.txt
src/experiments/ko/experiment01_bad_db_only/: README.md  model.py  predict.py
src/experiments/ko/experiment02_bad_db_only_no_l2/: model.py  predict.py
src/experiments/ko/experiment03_good_and_bad/: analytics_k_distance.py  analytics_mean_distance.py  analytics_time_series.py  model.py  predict.py
